<resources>
    <string name="app_name">MyTestApp</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="userName">userName</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="getbs">GetBs</string>
    <string name="getcatchphrase">GetCatchPhrase</string>
    <string name="companyname">CompanyName</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="suits">Suits</string>
    <string name="zipcode">Zipcode</string>
    <string name="lattitude">Lattitude</string>
    <string name="longitude">Longitude</string>
</resources>
