<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:elevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="@+id/name_tv"
            app:layout_constraintStart_toEndOf="@+id/name_tv">

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/tv_name"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/lightrey"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/lightrey"
                app:layout_constraintEnd_toStartOf="@+id/tv_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/name_tv"
                app:layout_constraintTop_toTopOf="@+id/name_tv" />

            <TextView
                android:id="@+id/username_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/lightrey"
                android:text="@string/userName"
                app:layout_constraintBottom_toTopOf="@+id/tv_email"
                app:layout_constraintEnd_toStartOf="@+id/tv_userName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_userName" />

            <TextView
                android:id="@+id/tv_userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/name_tv"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/email_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/lightrey"
                app:layout_constraintBottom_toBottomOf="@+id/tv_email"
                app:layout_constraintEnd_toStartOf="@+id/tv_userName"
                app:layout_constraintHorizontal_bias="1.0"

                app:layout_constraintStart_toStartOf="@+id/username_tv"
                app:layout_constraintTop_toBottomOf="@id/tv_userName"


                app:layout_constraintTop_toTopOf="@id/tv_email" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toBottomOf="@id/email_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/email_tv"
                app:layout_constraintTop_toBottomOf="@+id/tv_userName" />

            <TextView
                android:id="@+id/phone_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/lightrey"
                android:text="@string/phone"
                app:layout_constraintBottom_toTopOf="@+id/tv_website"
                app:layout_constraintEnd_toStartOf="@+id/tv_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_tv" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/phone_tv"
                app:layout_constraintTop_toBottomOf="@id/tv_email" />


            <TextView
                android:id="@+id/website_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textColor="@color/lightrey"
                app:layout_constraintBottom_toTopOf="@+id/tv_getBs"
                app:layout_constraintEnd_toStartOf="@+id/tv_website"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_tv" />

            <TextView
                android:id="@+id/tv_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/website_tv"
                app:layout_constraintTop_toBottomOf="@id/tv_phone"/>


            <TextView
                android:id="@+id/getbs_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/getbs"
                android:textColor="@color/lightrey"
                app:layout_constraintBottom_toTopOf="@+id/tv_getCatchPhrase"
                app:layout_constraintEnd_toStartOf="@+id/tv_getBs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_getBs" />

            <TextView
                android:id="@+id/tv_getBs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/getbs_tv"
                app:layout_constraintTop_toBottomOf="@id/tv_website" />

            <TextView
                android:id="@+id/phase_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/getcatchphrase"
                app:layout_constraintBottom_toTopOf="@+id/tv_companyName"
                app:layout_constraintEnd_toStartOf="@+id/tv_getBs"
                android:textColor="@color/lightrey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/getbs_tv" />

            <TextView
                android:id="@+id/tv_getCatchPhrase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/phase_tv"
                app:layout_constraintTop_toBottomOf="@id/tv_getBs" />

            <TextView
                android:id="@+id/camp_yv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/companyname"
                app:layout_constraintBottom_toTopOf="@+id/tv_city"
                android:textColor="@color/lightrey"
                app:layout_constraintEnd_toStartOf="@+id/tv_getCatchPhrase"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_companyName" />


            <TextView
                android:id="@+id/tv_companyName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/camp_yv"
                app:layout_constraintTop_toBottomOf="@id/tv_getCatchPhrase" />

            <TextView
                android:id="@+id/city_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/city"
                app:layout_constraintBottom_toTopOf="@+id/tv_street"
                android:textColor="@color/lightrey"
                app:layout_constraintEnd_toStartOf="@+id/tv_companyName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/camp_yv" />

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/city_tv"
                app:layout_constraintTop_toBottomOf="@id/tv_companyName" />

            <TextView
                android:id="@+id/street_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/street"
                app:layout_constraintBottom_toTopOf="@+id/tv_zipcode"
                app:layout_constraintEnd_toStartOf="@+id/tv_city"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/lightrey"
                app:layout_constraintTop_toBottomOf="@id/city_tv" />

            <TextView
                android:id="@+id/tv_street"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/city_tv"
                app:layout_constraintTop_toBottomOf="@id/tv_city" />


            <TextView
                android:id="@+id/zipcode_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/zipcode"
                app:layout_constraintBottom_toTopOf="@+id/tv_suits"
                app:layout_constraintEnd_toStartOf="@+id/tv_street"
                android:textColor="@color/lightrey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/street_tv" />

            <TextView
                android:id="@+id/tv_zipcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/zipcode_tv"
                app:layout_constraintTop_toBottomOf="@id/tv_street" />


            <TextView
                android:id="@+id/suit_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/suits"
                app:layout_constraintBottom_toTopOf="@+id/tv_lat"
                app:layout_constraintEnd_toStartOf="@+id/tv_zipcode"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/lightrey"
                app:layout_constraintTop_toBottomOf="@id/zipcode_tv" />

            <TextView
                android:id="@+id/tv_suits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/suit_tv"
                app:layout_constraintTop_toBottomOf="@id/tv_zipcode" />


            <TextView
                android:id="@+id/latitude_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lattitude"
                app:layout_constraintBottom_toTopOf="@+id/tv_lng"
                android:textColor="@color/lightrey"
                app:layout_constraintEnd_toStartOf="@+id/tv_suits"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/suit_tv" />

            <TextView
                android:id="@+id/tv_lat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/latitude_tv"
                app:layout_constraintTop_toBottomOf="@id/tv_suits" />


            <TextView
                android:id="@+id/longitude_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                app:layout_constraintBottom_toBottomOf="@+id/tv_lng"
                app:layout_constraintEnd_toStartOf="@+id/tv_lat"
                app:layout_constraintHorizontal_bias="0.0"
                android:textColor="@color/lightrey"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/latitude_tv"
                app:layout_constraintVertical_weight="1" />

            <TextView
                android:id="@+id/tv_lng"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/longitude_tv"
                app:layout_constraintTop_toBottomOf="@id/tv_lat"
                app:layout_constraintVertical_weight="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>